--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@ html {
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
   box-sizing: border-box;
-  font: normal 100%/1.3 'Abril Fatface', sans-serif;
+  font: normal 100%/1.3 'Amatica SC', sans-serif;
 }
 
 *, *::before, *::after {
@@ -23,32 +23,42 @@ body {
 
 h1 {
   color: white;
+  font-size: 2.5em;
   text-align: center;
-  background-color: #fe3fa9;
+  background-color: #ffe85a;
   margin: 0;
   padding: .5em 1em;
 }
 
+nav ul {
+  list-style-type: none;
+}
+
+nav a {
+  text-decoration: none;
+}
+
 .banner {
   position: relative;
-  max-height: 150px;
-  overflow: hidden;
 }
 
 .banner-content {
+  text-align: center;
   position: absolute;
-  width: 25rem;
-  left: 0;
-  bottom: 0;
+  bottom: 1.5em;
+  width: 80%;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .banner-content h2 {
   color: white;
   font-size: 2rem;
+  text-shadow: 2px 2px 5px black;
 }
 
 
 h2 {
-  font-family: "helvetica", sans-serif;
+  font-family: "Amatica SC", sans-serif;
 }
 }
