--- a/css/main.css
+++ b/css/main.css
@@ -70,24 +70,25 @@ nav a:hover {
 .banner-content {
   text-align: center;
   position: absolute;
-  bottom: 1.5em;
+  bottom: 2em;
   width: 80%;
   left: 50%;
   transform: translateX(-50%);
 }
 
 .banner-content h2 {
+  font-family: "Amatica SC", sans-serif;
   color: white;
   font-size: 2rem;
   text-shadow: 2px 2px 5px black;
+  padding: .3em;
+  margin: 0;
 }
 
-.banner-content h2 {
-  font-family: "Amatica SC", sans-serif;
-}
 
 section.about {
-  background-color: #ffe85a;
+
+  box-shadow: 2px 2px 5px grey
 }
 
 div.body-about {
@@ -101,4 +102,39 @@ div.body-about {
 .about p {
   font-family: 'Playfair Display', serif;
   font-size: .9em;
+  color: #f473b3;
+}
+
+ul.people {
+  padding: 0;
+  list-style-type: none;
+}
+
+li.card-one {
+  margin: 2em;
+  border: 3px solid #8d8d8d;
+  border-radius: 10px;
+  background-color: #e2e2e2;
+}
+
+.carl {
+  width: 100px;
+  display: block;
+  padding-top: 1em;
+  margin: 0 auto;
+}
+
+div.card-body {
+  margin: .4em;
+}
+
+.card-body strong {
+  font-size: 2.5rem;
+}
+
+.card-body p:first-child {
+  font-family: 'Amatica SC', sans-serif;
+  color: black;
+margin: 0;
+
 }
