--- a/css/main.css
+++ b/css/main.css
@@ -112,9 +112,9 @@ ul.people {
 
 li.card-one {
   margin: 2em;
-  border: 3px solid #8d8d8d;
+  border: 3px solid #01a2be;
   border-radius: 10px;
-  background-color: #e2e2e2;
+  background-color: white;
 }
 
 .carl {
@@ -135,6 +135,19 @@ div.card-body {
 .card-body p:first-child {
   font-family: 'Amatica SC', sans-serif;
   color: black;
-margin: 0;
+  margin: 0;
+}
 
+.card-body p:nth-child(2) {
+  color: black;
+  font-family: 'Amatica SC', sans-serif;
+  margin: 0;
+  padding-left: 10px;
+  font-size: 1.5rem;
+}
+
+.card-body p:last-child {
+  margin: 0;
+  padding-left: 10px;
+  padding-bottom: 1rem;
 }
