--- a/css/main.css
+++ b/css/main.css
@@ -130,20 +130,18 @@ div.card-body {
 
 .card-body strong {
   font-size: 2.5rem;
+  padding-left: .7rem;
+}
+
+.card-body small {
+  padding-left: .7rem;
+  font-size: 1.6em;
 }
 
 .card-body p:first-child {
   font-family: 'Amatica SC', sans-serif;
   color: black;
   margin: 0;
-}
-
-.card-body p:nth-child(2) {
-  color: black;
-  font-family: 'Amatica SC', sans-serif;
-  margin: 0;
-  padding-left: 10px;
-  font-size: 1.5rem;
 }
 
 .card-body p:last-child {
