--- a/css/main.css
+++ b/css/main.css
@@ -23,7 +23,7 @@ body {
 
 h1 {
   color: white;
-  font-size: 2.5em;
+  font-size: 2.7em;
   text-align: center;
   background-color: #ffe85a;
   margin: 0;
@@ -87,7 +87,6 @@ nav a:hover {
 
 
 section.about {
-
   box-shadow: 2px 2px 5px grey
 }
 
@@ -97,6 +96,8 @@ div.body-about {
 
 .about h2 {
   margin-top: 0;
+  margin-bottom: 0;
+  font-size: 2.5em;
 }
 
 .about p {
@@ -129,13 +130,13 @@ div.card-body {
 }
 
 .card-body strong {
-  font-size: 2.5rem;
+  font-size: 2rem;
   padding-left: .7rem;
 }
 
 .card-body small {
   padding-left: .7rem;
-  font-size: 1.6em;
+  font-size: 1.4em;
 }
 
 .card-body p:first-child {
